--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,27 @@
 {
   "name": "rentify-server",
   "version": "1.0.0",
-  "description": "Backend server for Rentify application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.5.0",
-    "express-validator": "^6.14.3",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "express-rate-limit": "^6.3.0",
+    "express-validator": "^6.14.0",
+    "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
-    "multer-storage-cloudinary": "^4.0.0"
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "jest": "^28.1.0",
+    "supertest": "^6.2.3"
   }
 }
