--- a/Clients/package.json
+++ b/Clients/package.json
@@ -3,10 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/markerclusterer": "^2.5.3",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
-    "axios": "^0.27.2"
+    "socket.io-client": "^4.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
