--- a/Clients/package.json
+++ b/Clients/package.json
@@ -7,12 +7,15 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "axios": "^0.27.2",
+    "i18next": "^25.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
     "react-joyride": "^2.9.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1"
   },
   "scripts": {
