--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^9.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "multer": "^1.4.5-lts.1",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.4",
     "nodemon": "^2.0.15",
