--- a/clients/package.json
+++ b/clients/package.json
@@ -16,7 +16,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^11.0.5",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "tweetnacl": "^0.14.5",
+    "tweetnacl-util": "^0.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
