--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
-    "stripe": "^18.3.0"
+    "stripe": "^18.3.0",
+    "cloudinary": "^1.x.x"
   },
   "devDependencies": {
     "jest": "^28.1.0",
