--- a/clients/package.json
+++ b/clients/package.json
@@ -6,6 +6,7 @@
     "@googlemaps/markerclusterer": "^2.5.3",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
+    "@tailwindcss/forms": "^0.5.10",
     "axios": "^0.27.2",
     "i18next": "^25.3.0",
     "react": "^18.2.0",
